--- a/resume.tex
+++ b/resume.tex
@@ -1,6 +1,6 @@
 %-------------------------
 % Resume in Latex
-% Author : Jake Gutierrez
+% Author : Nick Stuart
 % Based off of: https://github.com/sb2nov/resume
 % License : MIT
 %------------------------
@@ -143,7 +143,7 @@
       \resumeItemListStart
         \resumeItem{Worked as a member of the LM Aero Sensor Fusion team, specializing in Data Association.}
         \resumeItem{Developed and maintained tooling to analyze software test results (flight, lab, etc.) in C\# and MATLAB}
-        \resumeItem{Reduced significant technical debt of F35 Sensor Fusion code by identifying and resolving over 50 SPARs}
+        \resumeItem{Reduced significant technical debt of F35 Sensor Fusion code by identifying, resolving and verifying over 50 SPARs}
         \resumeItem{Performed all aspects of software development including design, development, test, integration, and maintenance of real-time embedded fusion software}
         \resumeItem{Reduced significant technical debt of F35 Sensor Fusion code}
         \resumeItem{Developed signals processing capabilities in Rust}
