--- a/resume.tex
+++ b/resume.tex
@@ -30,7 +30,19 @@
 
 % serif
 % \usepackage{CormorantGaramond}
-% \usepackage{charter}
+\usepackage[scaled]{helvet}
+\renewcommand\familydefault{\sfdefault} 
+\usepackage[T1]{fontenc}
+
+% Define colors
+\usepackage{xcolor}
+\definecolor{darkblue}{rgb}{0.0,0.0,0.3}
+
+% Adjust margins
+\usepackage[margin=1in]{geometry}
+
+% Section title formatting
+\titleformat{\section}{\color{darkblue}\Large\bfseries}{}{0em}{}[\titlerule]
 
 
 \pagestyle{fancy}
