--- a/resume.tex
+++ b/resume.tex
@@ -106,11 +106,7 @@
 \begin{document}
 
 %----------HEADING----------
-% \begin{tabular*}{\textwidth}{l@{\extracolsep{\fill}}r}
-%   \textbf{\href{http://sourabhbajaj.com/}{\Large Sourabh Bajaj}} & Email : \href{mailto:sourabh@sourabhbajaj.com}{sourabh@sourabhbajaj.com}\\
-%   \href{http://sourabhbajaj.com/}{http://www.sourabhbajaj.com} & Mobile : +1-123-456-7890 \\
-% \end{tabular*}
-
+% Replace my name and info with yours
 \begin{center}
     \textbf{\Huge \scshape Nick Stuart} \\ \vspace{1pt}
     \small 210-882-9905 $|$ \href{mailto:x@x.com}{\underline{nmstuart20@gmail.com}} $|$ 
@@ -150,14 +146,6 @@
       \resumeItemListEnd
       
 % -----------Multiple Positions Heading-----------
-%    \resumeSubSubheading
-%     {Software Engineer I}{Oct 2014 - Sep 2016}
-%     \resumeItemListStart
-%        \resumeItem{Apache Beam}
-%          {Apache Beam is a unified model for defining both batch and streaming data-parallel processing pipelines}
-%     \resumeItemListEnd
-%    \resumeSubHeadingListEnd
-%-------------------------------------------
 
     \resumeSubheading
       {Engineering Specialist}{Jun. 2020 -- Jun. 2022}
@@ -196,6 +184,7 @@
 
 
 %-----------PROJECTS-----------
+% Uncomment everything from here and replace with your information if you want to include projects
 % \section{Projects}
 %     \resumeSubHeadingListStart
 %       \resumeProjectHeading
@@ -206,27 +195,17 @@
 %             \resumeItem{Visualized GitHub data to show collaboration}
 %             \resumeItem{Used Celery and Redis for asynchronous tasks}
 %           \resumeItemListEnd
-%       \resumeProjectHeading
-%           {\textbf{Simple Paintball} $|$ \emph{Spigot API, Java, Maven, TravisCI, Git}}{May 2018 -- May 2020}
-%           \resumeItemListStart
-%             \resumeItem{Developed a Minecraft server plugin to entertain kids during free time for a previous job}
-%             \resumeItem{Published plugin to websites gaining 2K+ downloads and an average 4.5/5-star review}
-%             \resumeItem{Implemented continuous delivery using TravisCI to build the plugin upon new a release}
-%             \resumeItem{Collaborated with Minecraft server administrators to suggest features and get feedback about the plugin}
-%           \resumeItemListEnd
 %     \resumeSubHeadingListEnd
 
 
 
-%
 %-----------PROGRAMMING SKILLS-----------
+% Can replace this section with another skills and tools type section: like SAP, PDM, etc.
 \section{Technical Skills}
  \begin{itemize}[leftmargin=0.15in, label={}]
     \small{\item{
      \textbf{Languages}{: C++, Python, Rust, SQL (Postgres), MATLAB} \\
-    %  \textbf{Frameworks}{: React, Node.js, Flask, JUnit, WordPress, Material-UI, FastAPI} \\
      \textbf{Developer Tools}{: Git, Docker, VS Code, Visual Studio, PyCharm, IntelliJ, Eclipse} \\
-    %  \textbf{Libraries}{: pandas, NumPy, Matplotlib}
     }}
  \end{itemize}
 
