--- a/resume.tex
+++ b/resume.tex
@@ -141,7 +141,6 @@
         \resumeItem{Developed and maintained tooling to analyze software test results (flight, lab, etc.) in C\# and MATLAB}
         \resumeItem{Reduced significant technical debt of F35 Sensor Fusion code by identifying, resolving and verifying over 50 SPARs}
         \resumeItem{Performed all aspects of software development including design, development, test, integration, and maintenance of real-time embedded fusion software}
-        \resumeItem{Reduced significant technical debt of F35 Sensor Fusion code}
         \resumeItem{Developed signals processing capabilities in Rust}
       \resumeItemListEnd
       
@@ -151,7 +150,7 @@
       {Engineering Specialist}{Jun. 2020 -- Jun. 2022}
       {Bell Flight}{Fort Worth, TX}
       \resumeItemListStart
-        \resumeItem{Developed software in Java for use in the Mentor Graphics Capital suite that allowed the automation of several manual tasks involved in the creation of wire diagrams, harnesses, and other wire data. This significantly reduced the normal wire harness development time for a new program the size of FARA}
+        \resumeItem{Developed software in Java to automate several manual tasks involved in the creation of wire diagrams, harnesses, and other wire data. This significantly reduced the normal wire harness development time for a new program the size of FARA}
         \resumeItem{Worked as a member of the electrical wiring team on the Bell Future Vertical Lift program.}
         \resumeItem{Designed and released electrical wiring harnesses to support the installation of all systems on the aircraft. }
         \resumeItem{Created, released, and maintained electrical wire diagrams to support installation and troubleshooting. }
