--- a/resume.tex
+++ b/resume.tex
@@ -139,7 +139,7 @@
       \resumeItemListStart
         \resumeItem{Worked as a member of the LM Aero Sensor Fusion team, specializing in Data Association.}
         \resumeItem{Developed and maintained tooling to analyze software test results (flight, lab, etc.) in C\# and MATLAB}
-        \resumeItem{Reduced significant technical debt of F35 Sensor Fusion code by identifying, resolving and verifying over 50 SPARs}
+        \resumeItem{Reduced significant technical debt of F35 Sensor Fusion code by identifying, resolving and verifying over 50 problem reports (with many being issues that had been present for years)}
         \resumeItem{Performed all aspects of software development including design, development, test, integration, and maintenance of real-time embedded fusion software}
         \resumeItem{Developed signals processing capabilities in Rust}
       \resumeItemListEnd
