--- a/resume.tex
+++ b/resume.tex
@@ -140,8 +140,8 @@
         \resumeItem{Worked as a member of the LM Aero Sensor Fusion team, specializing in Data Association.}
         \resumeItem{Developed and maintained tooling to analyze software test results (flight, lab, etc.) in C\# and MATLAB}
         \resumeItem{Reduced significant technical debt of F35 Sensor Fusion code by identifying, resolving and verifying over 50 problem reports (with many being issues that had been present for years)}
-        \resumeItem{Performed all aspects of software development including design, development, test, integration, and maintenance of real-time embedded fusion software}
-        \resumeItem{Developed signals processing capabilities in Rust}
+        \resumeItem{Performed all aspects of software development including design, development, test, integration, and maintenance of real-time embedded fusion software in C++}
+        \resumeItem{Developed signals processing capabilities in Rust and supporting tools and webserver for capability demos}
       \resumeItemListEnd
       
 % -----------Multiple Positions Heading-----------
@@ -203,8 +203,8 @@
 \section{Technical Skills}
  \begin{itemize}[leftmargin=0.15in, label={}]
     \small{\item{
-     \textbf{Languages}{: C++, Python, Rust, SQL (Postgres), MATLAB} \\
-     \textbf{Developer Tools}{: Git, Docker, VS Code, Visual Studio, PyCharm, IntelliJ, Eclipse} \\
+     \textbf{Languages}{: C++, Rust, MATLAB, Java} \\
+     \textbf{Developer Tools}{: Git, Docker, VS Code, Atlassian Suite, Visual Studio, IntelliJ, Eclipse} \\
     }}
  \end{itemize}
 
