sw resume update

--- a/resume_sw.tex
+++ b/resume_sw.tex
@@ -138,10 +138,11 @@
       {Lockheed Martin}{Fort Worth, TX}
       \resumeItemListStart
         \resumeItem{Worked as a member of the LM Aero Sensor Fusion team, specializing in Data Association.}
+        \resumeItem{Performed Information Fusion with data such as radar, passive sensors, various tactical data links, and more.}
         \resumeItem{Developed and maintained tooling to analyze software test results (flight, lab, etc.) in C\# and MATLAB}
         \resumeItem{Reduced significant technical debt of F35 Sensor Fusion code by identifying, resolving and verifying over 50 problem reports (with many being issues that had been present for years)}
         \resumeItem{Performed all aspects of software development including design, development, test, integration, and maintenance of real-time embedded fusion software in C++}
-        \resumeItem{Developed signals processing capabilities in Rust and supporting tools and webserver for capability demos}
+        \resumeItem{Developed signals processing capabilities in Rust and supporting tools and webserver for capability demos.}
       \resumeItemListEnd
       
 % -----------Multiple Positions Heading-----------
