--- a/resume_sw.tex
+++ b/resume_sw.tex
@@ -137,7 +137,7 @@
       {Software Engineer Sr}{Jun. 2022 -- Present}
       {Lockheed Martin}{Fort Worth, TX}
       \resumeItemListStart
-        \resumeItem{Worked as a member of the LM Aero Sensor Fusion team, specializing in Data Association.}
+        \resumeItem{Worked as a member of the LM Aero Sensor Fusion team, specializing in Data Association, in an Agile software development team.}
         \resumeItem{Performed Information Fusion with data such as radar, passive sensors, various tactical data links, and more.}
         \resumeItem{Developed and maintained tooling to analyze software test results (flight, lab, etc.) in C\# and MATLAB}
         \resumeItem{Reduced significant technical debt of F35 Sensor Fusion code by identifying, resolving and verifying over 50 problem reports (with many being issues that had been present for years)}
