--- a/resume_alt.tex
+++ b/resume_alt.tex
@@ -138,6 +138,7 @@
       {Lockheed Martin}{Fort Worth, TX}
       \resumeItemListStart
         \resumeItem{Worked as a member of the Lockheed Martin Aeronautics Sensor Fusion team, specializing in Data Association.}
+        \resumeItem{Performed Information Fusion with data and sensors such as radar, passive sensors, tactical data links, and more.}
         \resumeItem{Developed and maintained tooling to analyze software test results (flight, lab, etc.) in C\# and MATLAB}
         \resumeItem{Reduced significant technical debt of F35 Sensor Fusion code by identifying, resolving and verifying over 50 SPARs (with many being issues that had been present for years)}
         \resumeItem{Performed all aspects of software development including design, development, test, integration, and maintenance of real-time embedded fusion software in C++}
