sw resume updates

--- a/resume_sw.tex
+++ b/resume_sw.tex
@@ -142,7 +142,7 @@
         \resumeItem{Developed and maintained tooling to analyze software test results (flight, lab, etc.) in C\# and MATLAB}
         \resumeItem{Reduced significant technical debt of F35 Sensor Fusion code by identifying, resolving and verifying over 50 problem reports.}
         \resumeItem{Performed all aspects of software development including design, development, test, integration, and maintenance of real-time embedded fusion software in C++}
-        \resumeItem{Developed signals processing capabilities in Rust and supporting tools and webserver for capability demos.}
+        \resumeItem{Developed RF signals processing (such as ADSB and Link-16) capabilities and supporting tools in Rust.}
       \resumeItemListEnd
       
 % -----------Multiple Positions Heading-----------
