--- a/resume_sw.tex
+++ b/resume_sw.tex
@@ -137,12 +137,13 @@
       {Software Engineer Sr}{Jun. 2022 -- Present}
       {Lockheed Martin}{Fort Worth, TX}
       \resumeItemListStart
-        \resumeItem{Worked as a member of the Lockheed Martin Aeronautics Sensor Fusion team, specializing in Data Association.}
+        \resumeItem{Worked as a member of the Lockheed Martin Aeronautics Sensor Fusion software development team. }
         \resumeItem{Performed Information Fusion with data and sensors such as radar, passive sensors, tactical data links, and more.}
-        \resumeItem{Developed and maintained tooling to analyze software test results (flight, lab, etc.) in C\# and MATLAB}
-        \resumeItem{Reduced significant technical debt of F35 Sensor Fusion code by identifying, resolving and verifying over 50 problem reports.}
-        \resumeItem{Performed all aspects of software development including design, development, test, integration, and maintenance of real-time embedded fusion software in C++}
         \resumeItem{Developed RF signals processing (such as ADSB and Link-16) capabilities and supporting tools in Rust.}
+        \resumeItem{Developed custom tracker for RF capabilities in Rust.}
+        \resumeItem{Developed and maintained tooling to analyze software test results (flight, lab, etc.) in C\# and MATLAB.}
+        \resumeItem{Reduced significant technical debt of F35 Sensor Fusion code by identifying, resolving and verifying many years worth of documented issues.}
+        \resumeItem{Performed all aspects of software development including design, development, test, integration, and maintenance of real-time embedded fusion software in C++}
       \resumeItemListEnd
       
 % -----------Multiple Positions Heading-----------
