--- a/resume_sw.tex
+++ b/resume_sw.tex
@@ -142,6 +142,7 @@
         \resumeItem{Developed RF signals processing (such as ADSB and Link-16) capabilities and supporting tools in Rust.}
         \resumeItem{Developed custom tracker for RF capabilities in Rust.}
         \resumeItem{Developed and maintained tooling to analyze software test results (flight, lab, etc.) in C\# and MATLAB.}
+        \resumeItem{Developed a simulation environment in MATLAB for rapid signals processing algorithm development.}
         \resumeItem{Reduced significant technical debt of F35 Sensor Fusion code by identifying, resolving and verifying many years worth of documented issues.}
         \resumeItem{Performed all aspects of software development including design, development, test, integration, and maintenance of real-time embedded fusion software in C++}
       \resumeItemListEnd
