--- a/resume_sw.tex
+++ b/resume_sw.tex
@@ -139,8 +139,9 @@
       \resumeItemListStart
         \resumeItem{Worked as a member of the Lockheed Martin Aeronautics Sensor Fusion software development team. }
         \resumeItem{Performed Information Fusion with data and sensors such as radar, passive sensors, tactical data links, and more.}
-        \resumeItem{Developed RF signals processing (such as ADSB and Link-16) capabilities and supporting tools in Rust.}
-        \resumeItem{Developed custom tracker for RF capabilities in Rust.}
+        \resumeItem{Developed RF signals processing capabilities and supporting tools in Rust.}
+        \resumeItem{Developed custom Fusion Tracker for RF capabilities in Rust.}
+	\resumeItem{Developed GUI in Rust for RF and Fusion analysis.}
         \resumeItem{Developed and maintained tooling to analyze software test results (flight, lab, etc.) in C\# and MATLAB.}
         \resumeItem{Developed a simulation environment in MATLAB for rapid signals processing algorithm development.}
         \resumeItem{Reduced significant technical debt of F35 Sensor Fusion code by identifying, resolving and verifying many years worth of documented issues.}
