--- a/resume_sw.tex
+++ b/resume_sw.tex
@@ -141,7 +141,7 @@
         \resumeItem{Performed Information Fusion with data and sensors such as radar, passive sensors, tactical data links, and more.}
         \resumeItem{Developed RF signals processing capabilities and supporting tools in Rust.}
         \resumeItem{Developed custom Fusion Tracker for RF capabilities in Rust.}
-	\resumeItem{Developed GUI in Rust for RF and Fusion analysis.}
+	      \resumeItem{Developed suite of software in Rust for RF and Fusion analysis.}
         \resumeItem{Developed and maintained tooling to analyze software test results (flight, lab, etc.) in C\# and MATLAB.}
         \resumeItem{Developed a simulation environment in MATLAB for rapid signals processing algorithm development.}
         \resumeItem{Reduced significant technical debt of F35 Sensor Fusion code by identifying, resolving and verifying many years worth of documented issues.}
@@ -206,8 +206,8 @@
 \section{Technical Skills}
  \begin{itemize}[leftmargin=0.15in, label={}]
     \small{\item{
-     \textbf{Languages}{: C++, Rust, MATLAB, Java} \\
-     \textbf{Developer Tools}{: Git, Docker, VS Code, Atlassian Suite, Visual Studio, IntelliJ, Eclipse} \\
+     \textbf{Languages}{: Rust, MATLAB, C++, Java} \\
+     \textbf{Developer Tools}{: Git, Docker, Kubernetes, Gitlab CI/CD} \\
     }}
  \end{itemize}
 
