--- a/resume_sw.tex
+++ b/resume_sw.tex
@@ -134,7 +134,7 @@
   \resumeSubHeadingListStart
 
   \resumeSubheading
-  {Software Engineer - RF Signal Processing Team}{2022 - Present}
+  {Software Engineer - RF Signal Processing and Tracking}{2022 - Present}
   {Lockheed Martin}{Fort Worth}
   \resumeItemListStart
       \resumeItem{Architected and developed complete RF signal processing pipeline from I/Q data ingestion to target tracking solutions}
@@ -145,7 +145,7 @@
   \resumeItemListEnd
 
 \resumeSubheading
-  {Software Engineer - Sensor Fusion Team}{2022 - 2024}
+  {Software Engineer - Sensor Fusion}{2022 - 2024}
   {Lockheed Martin}{Fort Worth}
   \resumeItemListStart
       \resumeItem{Maintained and enhanced sensor fusion capabilities for F-35 Lightning II aircraft systems}
